2017-12-21 Ivan Vucica <ivan@vucica.net>

	* Documentation/announce.texi
	* Documentation/news.texi
	* Documentation/ReleaseNotes.gsdoc
	* ANNOUNCE
	* NEWS
	* Version: Cut a new release of gnustep-gui which requires
	gnustep-base 1.25.1.

2017-12-10 Ivan Vucica <ivan@vucica.net>

	* NEWS: Regenerate NEWS file for the 0.26.0 release.

2017-12-07 Ivan Vucica <ivan@vucica.net>

	* Documentation/announce.texi: Use GNUSTEP-GUI-VERSION even when
	talking about -back.
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi: Update with notable changes for 0.26.0.
	* ANNOUNCE: Regenerated the ANNOUNCE file from announce.texi and
	news.texi.

2017-12-07 Ivan Vucica <ivan@vucica.net>

	* Source/NSImage.m (-initWithCoder:): Clean up and reduce amount
	of releases of self.

2017-12-03 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSScreen.h
	* Source/NSScreen.m (-backingScaleFactor): Add new method. Change
	return value of -userSpaceScaleFactor to CGFloat.
	* Source/NSWindow.m (-backingScaleFactor): Return 1 instead of 0.

2017-10-28  Graham Lee  <graham@iamleeg.com>

	* Source/NSImage.m (initWithCoder:): restore image name when
	loading an archived image with a name that can't be resolved at
	load time. Fixes Gorm bug #46317.

2017-10-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m (-isPartlyOffScreen): Protect agains window or
	screen being nil.
	* Source/NSWindow.m (-_screenForFrame:): Try not to return nil, as
	other code uses the result without checks.

2017-10-01 Ivan Vucica <ivan@vucica.net>

	* Documentation/ReleaseNotes.gsdoc:
	Backfill 0.24.1 through 0.25.1. Add stub 0.26.0 entry.

	* Documentation/news.texi:
	Add stub 0.26.0 entry.

	* Version:
	Bump to 0.26.0.

2017-08-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSStepperCell.m (-trackMouse:...untilMouseUp:): Adjust
	to changes in super class.

2017-08-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-setButtonType:): Warn about unsupported
	button types.